# llm-observability-otel

./: .env.example  .gitignore  CHANGES_SUMMARY.md  Dockerfile  LICENSE  Makefile  README.md  TELEMETRY.md  deploy-to-acr.sh  docker-compose.yml  enhancements.md  pyproject.toml  requirements.txt
docs/: Enhanced_Telemetry.md  Telemetry.md  telemetry-tutorial-app-insights.md
infrastructure/: backend.hcl  backend.hcl.example  backend.tf  main.tf  outputs.tf  providers.tf  setup-backend.sh  setup-tf-backend.sh  tfplan  variables.tf
src/: __init__.py
src/agent/: __init__.py  agents.py  app.py  graph.py  instrumentation.py
src/tests/: test_graph.py
test/: test_api.py  test_graph.py  test_telemetry.py
